# fanatic-alpha

./: .gitignore  Anchor.toml  Cargo.toml  README.md
agents/odds-monitor/: Cargo.toml
agents/odds-monitor/src/: main.rs  sse_client.rs
agents/strategy-engine/: Cargo.toml
agents/strategy-engine/src/: lib.rs
programs/fanatic-alpha/: Cargo.toml
programs/fanatic-alpha/src/: lib.rs
scripts/: run-agent.sh
