[package]
name = "odds-monitor"
version = "0.1.0"
edition = "2021"
description = "FANatic Alpha — Autonomous TxLINE odds monitor agent for World Cup 2026"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
eventsource-stream = "0.2"
strategy-engine = { path = "../strategy-engine" }
base64 = "0.22"
ed25519-dalek = "2"
hex = "0.4"
rustls = "0.23"
rustls-native-certs = "0.8"
url = "2"