[package]
name = "strategy-engine"
version = "0.1.0"
edition = "2021"
description = "FANatic Alpha — Strategy engine for autonomous odds-based trading decisions"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1"
rust_decimal = "1"
rust_decimal_macros = "1"