[package]
name = "fanatic-alpha"
version = "0.1.0"
description = "FANatic Alpha — Autonomous Trading Agent Settlement on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fanatic_alpha"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
solana-program = "2.1.0"
